@@ -1,3 +1,6 @@
+2007-01-12 backend_cairo.py: fix draw_image() so that examples/image_demo.py
+           now looks correct - SC
+
 2007-01-11 Added Axes.xcorr and Axes.acorr to plot the cross
            correlation of x vs y or the autocorrelation of x.  pylab
            wrappers also provided.  See examples/xcorr_demo.py - JDH
